--- a/_posts/2021-10-18-r2dii-plot-0-2-0/r2dii-plot-0-2-0.Rmd
+++ b/_posts/2021-10-18-r2dii-plot-0-2-0/r2dii-plot-0-2-0.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "r2dii-plot 0.2.0 is now on CRAN"
+title: "r2dii.plot 0.2.0 is now on CRAN"
 description: |
   New styling functions, new arguments to `plot_*()`, and bug fixes.
 author:
