--- a/_posts/2022-03-02-ald-becomes-abcd/2022-03-02-ald-becomes-abcd.Rmd
+++ b/_posts/2022-03-02-ald-becomes-abcd/2022-03-02-ald-becomes-abcd.Rmd
@@ -14,7 +14,7 @@ output:
   self_contained: true
 categories:
   - methodology
-preview: preview.jpg
+preview: preview.png
 twitter:
   site: "@jdhoffart"
   creator: "@jdhoffart"
